[package]
name = "poemstars-match-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
csv = "1.1.6"
message-io = "0.14.2"
rand = "0.8.4"
serde = {version = "1.0.127", features=["derive"]}
serde_json = "1.0.66"
