[package]
name = "poemstars-match-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
chrono = "0.4.19"
csv = "1.1.6"
lazy_static = "1.4.0"
log = "0.4.14"
log4rs = "1.0.0"
message-io = "0.14.2"
rand = "0.8.4"
redis = "0.21.0"
serde = {version = "1.0.127", features=["derive"]}
serde_json = "1.0.66"
uuid = {version = "0.8.2", features = ["serde", "v4"]}
